--- a/EntityPG/appsettings.json
+++ b/EntityPG/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "Ef_Postgres_Db": "Server=host.docker.internal;Database=shoppingFlipkart;Port=49159;User Id=postgres;Password=postgrespw" }
 }
